Fixed screen overflow bug

--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ button:hover{
 	height: 100%;
 	margin: 0;
 	font-weight: bold;
+	overflow-wrap: break-word;
 }
 
 @media (min-width: 500px){
